--- a/CIPlatfromWebAPI_PostgreSQL/CIPlatfromWebAPI/appsettings.json
+++ b/CIPlatfromWebAPI_PostgreSQL/CIPlatfromWebAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=AuthDb; Username=postgres; Password=postgre"
+    "DefaultConnection": "Host=localhost; Database=AuthDb; Username=postgres; Password="
   },
   "JwtConfig": {
     "Key": "CIProject98765ANGNET1234678910@CIProject",
